--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             border: 5px solid #0000ff;
             border-radius: 50%;
             margin: 20px auto;
-            background: url('https://i.ibb.co/rKmTc7Tm/IMG-1072.png') center/cover;
+            background: url('images/adrit3.png') center/cover;
             filter: hue-rotate(90deg) saturate(200%);
             transition: transform 0.3s;
         }
@@ -185,9 +185,9 @@
         <h1>🎉 ADRIT BHATNAGAR 🎉<br>WORLD'S #1 CHUT PAGLU! 🏆</h1>
 
         <div class="slideshow">
-            <img src="https://i.ibb.co/rKmTc7Tm/IMG-1072.png" alt="Adrit 1" class="slide active">
-            <img src="https://i.ibb.co/PGbTWjWH/IMG-1073.png" alt="Adrit 2" class="slide">
-            <img src="https://i.ibb.co/nNB3B0rF/IMG-1074.png" alt="Adrit 3" class="slide">
+            <img src="images/adrit1.png" alt="Adrit 1" class="slide active">
+            <img src="images/adrit2.png" alt="Adrit 2" class="slide">
+            <img src="images/adrit3.png" alt="Adrit 3" class="slide">
         </div>
 
         <p class="meme-text">"When the chutpagluness is too strong..." 😎</p>
