--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Adrit Bhatnagar - World's Biggest Chut Paglu! 🎉</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://i.ibb.co/rKmTc7Tm/IMG-1072.png">
+    <link rel="icon" type="image/png" href="images/adrit1.png">
     <style>
         /* General Styles */
         body {
