--- a/index.html
+++ b/index.html
@@ -48,12 +48,7 @@
         }
 
         .slideshow {
-            position: relative;
-            width: 100%;
-            max-width: 300px;
-            height: auto;
-            margin: 20px auto;
-            overflow: hidden;
+            margin: 20px 40px;
             border: 5px solid #ff00ff;
             border-radius: 50%;
         }
