--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 20px;
             background: linear-gradient(45deg, #ff00ff, #00ffff, #ffff00);
-            font-family: 'Comic Sans MS';
+            font-family: 'Comic Sans MS', cursive;
             min-height: 100vh;
             overflow-x: hidden;
         }
@@ -35,6 +35,7 @@
             animation: float 3s ease-in-out infinite;
         }
 
+        /* Meme Image */
         .meme-image {
             width: 100%;
             max-width: 300px;
@@ -42,13 +43,27 @@
             border: 5px solid #0000ff;
             border-radius: 50%;
             margin: 20px auto;
-            background: url('images/adrit3.png') center/cover;
-            filter: hue-rotate(90deg) saturate(200%);
-            transition: transform 0.3s;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
+        .meme-img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+
+        /* Slideshow */
         .slideshow {
-            margin: 20px 40px;
+            position: relative;
+            width: 100%;
+            max-width: 300px;
+            height: 300px;
+            margin: 20px auto;
+            overflow: hidden;
             border: 5px solid #ff00ff;
             border-radius: 50%;
         }
@@ -60,6 +75,7 @@
             object-fit: cover;
             opacity: 0;
             transition: opacity 1s ease-in-out;
+            border-radius: 50%;
         }
 
         .slide.active {
@@ -148,6 +164,7 @@
 
             .meme-image, .slideshow {
                 max-width: 200px;
+                height: 200px;
             }
 
             .meme-text {
@@ -179,6 +196,12 @@
     <div class="container">
         <h1>🎉 ADRIT BHATNAGAR 🎉<br>WORLD'S #1 CHUT PAGLU! 🏆</h1>
 
+        <!-- Meme Image -->
+        <div class="meme-image">
+            <img src="images/adrit1.png" alt="Adrit's Meme Image" class="meme-img">
+        </div>
+
+        <!-- Slideshow -->
         <div class="slideshow">
             <img src="images/adrit1.png" alt="Adrit 1" class="slide active">
             <img src="images/adrit2.png" alt="Adrit 2" class="slide">
@@ -210,8 +233,9 @@
         <div class="meme-text" id="randomText">Click anywhere for surprise!</div>
     </div>
 
+    <!-- Background Music -->
     <audio autoplay loop id="backgroundMusic">
-        <source src="https://your-audio-hosting-url/funky-music.mp3" type="audio/mpeg">
+        <source src="audio/funky-music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
