--- a/index.html
+++ b/index.html
@@ -35,27 +35,6 @@
             animation: float 3s ease-in-out infinite;
         }
 
-        /* Meme Image */
-        .meme-image {
-            width: 100%;
-            max-width: 300px;
-            height: auto;
-            border: 5px solid #0000ff;
-            border-radius: 50%;
-            margin: 20px auto;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .meme-img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50%;
-        }
-
         /* Slideshow */
         .slideshow {
             position: relative;
@@ -162,7 +141,7 @@
                 font-size: 2em;
             }
 
-            .meme-image, .slideshow {
+            .slideshow {
                 max-width: 200px;
                 height: 200px;
             }
@@ -195,11 +174,6 @@
 <body>
     <div class="container">
         <h1>🎉 ADRIT BHATNAGAR 🎉<br>WORLD'S #1 CHUT PAGLU! 🏆</h1>
-
-        <!-- Meme Image -->
-        <div class="meme-image">
-            <img src="images/adrit1.png" alt="Adrit's Meme Image" class="meme-img">
-        </div>
 
         <!-- Slideshow -->
         <div class="slideshow">
