--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 20px;
             background: linear-gradient(45deg, #ff00ff, #00ffff, #ffff00);
-            font-family: 'Comic Sans MS', cursive;
+            font-family: 'Comic Sans MS';
             min-height: 100vh;
             overflow-x: hidden;
         }
