--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
             <div class="meme-item">
                 <h3>🏅 Skills 🏅</h3>
-                <p>Professional Meme Lord<br>PhD in Chutpaglu-ology</p>
+                <p>CEO of Chutpaglu<br>PhD in Chutpaglu-ology</p>
             </div>
         </div>
 
