--- a/index.html
+++ b/index.html
@@ -295,9 +295,10 @@
             "Chutpaglu Alert! 🚨",
             "Adrit is watching... 👀",
             "Warning: Extreme Pagluness! ⚠️",
-            "Certified Legend™️",
+            "Certified Gandu™️",
             "100% Pure Chutpaglu! 🧪",
-            "Meme Overload Incoming! 💥"
+            "Sniff Incoming! 💥",
+            "Dalla No.1"
         ];
 
         document.addEventListener('click', () => {
