--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
     <!-- Background Music -->
     <audio autoplay loop id="backgroundMusic">
-        <source src="audio/funky-music.mp3" type="audio/mpeg">
+        <source src="music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
