--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            background: rgba(255, 255, 255, 0.9);
+            background: linear-gradient(45deg, #ffc0cb, #ff69b4, #ff1493);
             padding: 30px;
             border-radius: 20px;
             border: 5px dashed #ff0000;
