--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
-            background: linear-gradient(45deg, #ffc0cb, #ff69b4, #ff1493);
+background: linear-gradient(45deg, 
+    rgba(255, 192, 203, 0.5),  /* light pink at 50% opacity */
+    rgba(255, 105, 180, 0.5),  /* hot pink */
+    rgba(255, 20, 147, 0.5));  /* deep pink */
             padding: 30px;
             border-radius: 20px;
             border: 5px dashed #ff0000;
