--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         .container {
             max-width: 800px;
             margin: 0 auto;
+            background: linear-gradient(45deg, 
+    rgba(255, 240, 245, 0.5), /* LavenderBlush */
+    rgba(255, 228, 225, 0.5), /* MistyRose */
+    rgba(255, 245, 238, 0.5)  /* Seashell */
+  );
             padding: 30px;
             border-radius: 20px;
             border: 5px dashed #ff0000;
