--- a/index.html
+++ b/index.html
@@ -206,6 +206,9 @@
             <img src="images/adrit1.png" alt="Adrit 1" class="slide active">
             <img src="images/adrit2.png" alt="Adrit 2" class="slide">
             <img src="images/adrit3.png" alt="Adrit 3" class="slide">
+            <img src="images/adrit4.png" alt="Adrit 4" class="slide">
+            <img src="images/adrit5.png" alt="Adrit 5" class="slide">
+            <img src="images/adrit6.png" alt="Adrit 6" class="slide">
         </div>
 
         <p class="meme-text">"When the chutpagluness is too strong..." 😎</p>
