--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             #musicToggle {
                 padding: 8px 16px;
                 font-size: 0.9em;
-                top: 10px;
+                bottom: 10px;
                 right: 10px;
             }
             .flying-image { width: 120px !important; }
@@ -340,7 +340,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🎉 ADRIT BHATNAGAR 🎉<br>WORLD'S #1 CHUT PAGLU! 🏆</h1>
+        <h1>🎉 ADRIT BHATNAGAR<br>WORLD'S #1 CHUT PAGLU! 🏆</h1>
 
         <div class="slideshow">
             <img src="images/adrit1.png" alt="Adrit 1" class="slide active">
