--- a/index.html
+++ b/index.html
@@ -588,9 +588,7 @@
         // Voice Clips
         const voiceButton = document.getElementById('voiceButton');
         const voiceClips = [
-            new Audio('chutpaglu1.mp3'), // Placeholder—replace with your own voice clips!
-            new Audio('chutpaglu2.mp3'),
-            new Audio('chutpaglu3.mp3')
+            new Audio('https://www.myinstants.com/en/instant/makaka-funk-88128/?utm_source=copy&utm_medium=share'), // Placeholder—replace with your own voice clips!
         ];
 
         voiceButton.addEventListener('click', () => {
